Alterando altura da box

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2190,7 +2190,7 @@ input, select, textarea {
 				}
 
 				#portfolio .box.style2 {
-					min-height: 500px;
+					min-height: auto;
 				}
 
 		/* Wrappers */
