--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1785,6 +1785,10 @@ input, select, textarea {
 			min-height: 500px;
 		}
 
+		#work .box.style2 {
+			min-height: 300px;
+		}
+
 /* Icons */
 
 	.icon {
