--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2197,6 +2197,9 @@ input, select, textarea {
 					min-height: auto;
 				}
 
+				#work .box.style2 {
+					min-height: auto;
+
 		/* Wrappers */
 
 			.wrapper {
