--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1691,9 +1691,6 @@ input[type=radio] + label:before {
   background: url("images/overlay.png"), url("images/overlay.png");
   opacity: 1;
 }
-.image.thumb img {
-  height: 325px;
-}
 .image img {
   border-radius: 0.35em;
   display: block;
@@ -2092,14 +2089,14 @@ input[type=button]:disabled,
   flex-direction: column;
 }
 .work-item:has(.tecnologias) {
-  min-height: 512px;
+  height: 480px;
 }
 .work-item .image {
-  margin: 0 0 1.5em 0;
+  margin: auto 0;
 }
 .work-item h3 {
   font-size: 1em;
-  margin: 0 0 0.5em 0;
+  margin: auto 0 0.5em 0;
 }
 .work-item p {
   font-size: 0.8em;
@@ -2486,6 +2483,12 @@ body.is-touch .poptrox-popup .closer {
   body, input, select, textarea {
     font-size: 12pt;
   }
+  .work-item:has(.tecnologias) {
+    height: 410px;
+  }
+  .work-item {
+    height: 350px;
+  }
 }
 /* Large */
 @media screen and (max-width: 1280px) {
@@ -2518,6 +2521,12 @@ body.is-touch .poptrox-popup .closer {
     padding: 6em 3em 3em 3em;
     width: calc(100% - 30%);
   }
+  .work-item:has(.tecnologias) {
+    height: 390px;
+  }
+  .work-item {
+    height: 350px;
+  }
 }
 /* Medium */
 @media screen and (max-width: 980px) {
@@ -2547,6 +2556,9 @@ body.is-touch .poptrox-popup .closer {
   }
   #header h1 br {
     display: inline;
+  }
+  #header .bg-header {
+    height: 100%;
   }
   /* Footer */
   #footer {
